chore: loom build update